...
    "Account Removed" : {

    },
    "Accounts" : {

    },
    "Add" : {

    },
    "Add Account" : {

    },
    "Add Contact" : {

    },
    "Add to Contacts" : {

    },
    "Address" : {
...
    "Change Nickname" : {

    },
    "Change Subject" : {

    },
    "Chats" : {

    },
    "Chats and messages" : {

    },
    "Choose a contact from the list." : {
...
    "Configure…" : {

    },
    "Connection" : {

    },
    "Connection settings" : {

    },
    "Contacts" : {

    },
    "Contacts scan this code, or compare the fingerprint, to verify your messages come from this device." : {

    },
    "Contacts see this until they name you themselves." : {
...
    "Default (%@)" : {

    },
    "Delete" : {

    },
    "Delivered" : {

    },
    "Destroy" : {

    },
    "Destroy %@ for everyone?" : {

    },
    "Destroy Room" : {

    },
    "Details" : {

    },
    "Device %@" : {
...
    "Domain" : {

    },
    "Don’t Trust" : {

    },
    "Done" : {

    },
    "Double-tap to download" : {

    },
    "Double-tap to view" : {
...
    "name@example.com" : {

    },
    "Never" : {

    },
    "New Chat" : {

    },
    "New Group" : {

    },
    "New Messages" : {
...
    "Pause" : {

    },
    "Photo" : {

    },
    "Photos & Videos" : {

    },
    "Photos, Videos & Files" : {

    },
    "Play" : {
...
    "Remove %@?" : {

    },
    "Remove Account" : {

    },
    "Remove Avatar" : {

    },
    "Remove Contact" : {

    },
    "Remove from Account…" : {
...
    "Remove This Device?" : {

    },
    "Remove…" : {

    },
    "Reply" : {

    },
    "Reply to %@: %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Session" : {

    },
    "Set" : {

    },
    "Settings" : {

    },
    "Share" : {

    },
    "Share Contact" : {
...
    "This room keeps members’ addresses hidden." : {

    },
    "Transferring" : {

    },
    "Trust and Continue" : {

    },
    "Trust options" : {

    },
    "Trust This Certificate" : {
...
    "Unblock" : {

    },
    "Unmute" : {

    },
    "Untrusted Certificate" : {

    },
    "Up to" : {

    },
    "Use Theme Accent" : {
...
